@@ -5,6 +5,11 @@ Version Changes for Hypermail
 HYPERMAIL VERSION 2.5.0
 ============================
 
+2021-09-08 Jose Kahan
+	* src/print.c src/print.h
+	If set_show_headers is configured, output headers respecting the same
+	order as they are declared in this configuration variable.
+
 2021-09-07 Jose Kahan
 	* src/string.c
 	Make unrre() returN NOSUBJECT when a subject is made only of
@@ -28,7 +33,7 @@ HYPERMAIL VERSION 2.5.0
 	changed the link pointing to the hypermail project to the github
 	repository
 
-	* src/print.c src/printfile.c
+	* src/print.c src/printfile,c src/threadprint.c
 	updated markup to HTML5. Reviewed and enhanced the WAI related markup
 
 	* src/hypermail.c src/setup.[ch] src/print.c
